# pss

./: .gitignore  README.md
pss-client/: index.html  package-lock.json  package.json
pss-client/src/: AddProductComponent.tsx  App.css  App.tsx  CollectionSelectionComponent.tsx  LanguageSelectionComponent.tsx  NotificationComponent.tsx  SendQueryComponent.tsx  index.css  main.tsx
pss-server/: Cargo.toml  api.md
pss-server/src/: args.rs  controller.rs  etl.rs  lib.rs  main.rs  product.rs  translate.rs
