[package]
name = "pss-server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap		= { version = "4.1.4", features = ["derive"] }
csv 		= "1.3.0"
env_logger 	= "0.11.5"
log  		= "0.4.0"
reqwest 	= { version = "0.12.7", features = ["json"] }
rocket 		= { version = "0.5.1", features = ["json"] }
serde 		= { version = "1.0", features = ["derive"] }
serde_json     	= "1.0.120"
thiserror 	= "2.0.3"
valentinus 	= "0.6.0"
